# yc-agent-hacks

./: .gitignore  README.md
backend/: .env.example  README.md  captain_client.py  main.py  pr_creator.py  pyproject.toml  reauth_and_test.py  repo_indexer.py  requirements.txt  simple_oauth_start.py  slack_direct.py  slack_webhook.py  test_initialize.py  test_list_channels.py  test_personality.py  test_posthog_integration.py  test_slack_direct.py  test_slack_mcp.py  test_slack_message.py
backend/northstar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/northstar_mcp/: __init__.py  git_ops.py  github_ops.py  morph_client.py  server.py  utils.py
backend/northstar_mcp_typescript/: .gitignore  GITHUB_SETUP.md  README.md  deno.json  git_ops.ts  github_ops.ts  metorial.json  morph_client.ts  package.json  server.ts  utils.ts
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: ExperimentCard.jsx  LogFeed.jsx  MetricCard.jsx  Navbar.jsx
frontend/src/pages/: Dashboard.jsx  ExperimentDetails.jsx  Insights.jsx  Landing.jsx  Login.jsx  SIgnUp.jsx  Settings.jsx
